--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    
+    <ul>
+        <li><a href="spareribs.html">Spareribs</a></li>
+        <li><a href="waffle.html">Waffle</a></li>
+    </ul>
 </body>
 </html>
