--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <ul>
         <li><a href="spareribs.html">Spareribs</a></li>
         <li><a href="waffle.html">Waffle</a></li>
+        <li><a href="macandcheese.html">Mac and cheese</a></li>
+
     </ul>
 </body>
 </html>
